terraform/modules/posthog/manifests/posthog.middleware-assets.yaml
# Middleware to set Host header for the posthog assets proxy
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: posthog-assets-headers
  namespace: posthog
spec:
  headers:
    customRequestHeaders:
      Host: "eu-assets.i.posthog.com"
