terraform/modules/posthog/manifests/posthog.middleware.yaml
# Middleware to set Host header for the main posthog proxy
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: posthog-proxy-headers
  namespace: posthog
spec:
  headers:
    customRequestHeaders:
      Host: "eu.i.posthog.com"
