terraform/modules/posthog/manifests/posthog.ext-svc-assets.yaml
apiVersion: v1
kind: Service
metadata:
  name: posthog-assets-proxy
  namespace: posthog
spec:
  type: ExternalName
  externalName: eu-assets.i.posthog.com
  ports:
    - name: https
      protocol: TCP
      port: 443
