terraform/modules/posthog/manifests/posthog.ext-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: posthog-proxy
  namespace: posthog
spec:
  type: ExternalName
  externalName: eu.i.posthog.com
  ports:
    - name: https
      protocol: TCP
      port: 443
